Remove .snk files

--- a/MigraDoc/src/MigraDoc.Rendering.Standard/MigraDoc.Rendering.Standard.csproj
+++ b/MigraDoc/src/MigraDoc.Rendering.Standard/MigraDoc.Rendering.Standard.csproj
@@ -6,12 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Didstopia.PDFSharp" Version="1.0.0-beta4" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\MigraDoc.DocumentObjectModel.Standard\MigraDoc.DocumentObjectModel.Standard.csproj">
-		<Name>MigraDoc.DocumentObjectModel</Name>
-	</ProjectReference>
+    <PackageReference Include="MigraDoc.DocumentObjectModel.Standard" Version="1.0.5" />
   </ItemGroup>
 
 </Project>
