--- a/MigraDoc/src/MigraDoc.Rendering.Standard/MigraDoc.Rendering.Standard.csproj
+++ b/MigraDoc/src/MigraDoc.Rendering.Standard/MigraDoc.Rendering.Standard.csproj
@@ -2,6 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>  
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <RepositoryUrl>https://github.com/MiniverCheevy/MigraDoc.git</RepositoryUrl>
+    <PackageReleaseNotes>forked from Connatix/MigraDoc</PackageReleaseNotes>
+    <PackageProjectUrl>https://github.com/MiniverCheevy/MigraDoc</PackageProjectUrl>
+    <Description>forked from Connatix/MigraDoc</Description>
+    <RepositoryType>git</RepositoryType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>Z:\Dropbox\Lib\Projects\voodoo-reports\ref\</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>Z:\Dropbox\Lib\Projects\voodoo-reports\ref\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
